Fixed Bug 1206: Axis labels now larger and more of a gap between sliders and comment boxes.

--- a/ape.css
+++ b/ape.css
@@ -43,7 +43,11 @@ div#slider {
 
 div.sliderScale {
 	width: 100%;
-	min-height: 20px;
+	min-height: 30px;
+}
+
+div.sliderScale span{
+	font-size: 1.2em;
 }
 
 div.sliderScale span {
